# gchecker

./: .gitignore  CMakeLists.txt  README.md
src/: GChecker.cpp  GChecker.hpp  GCheckerMain.cpp
test/: CMakeLists.txt  gchecker_test.cpp
